--- a/resources/views/sims/test.html
+++ b/resources/views/sims/test.html
@@ -1,157 +1,74 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    </head> 
+  <head>
+    <title>Google Maps API Example</title>
     <style>
-    /* (A) LIST STYLES */
-.slist {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.slist li {
-  margin: 10px;
-  padding: 15px;
-  border: 1px solid #dfdfdf;
-  background: #f5f5f5;
-}
-
-/* (B) DRAG-AND-DROP HINT */
-.slist li.hint {
-  border: 1px solid #ffc49a;
-  background: #feffb4;
-}
-.slist li.active {
-  border: 1px solid #ffa5a5;
-  background: #ffe7e7;
-}
-
-/* (X) DOES NOT MATTER */
-/* PAGE & BODY */
-* {
-  font-family: arial, sans-serif;
-  box-sizing: border-box;
-}
-body {
-  display: flex;
-  align-items: center; justify-content: center;
-  min-height: 100vh;
-  background-image: url(https://images.unsplash.com/photo-1629555410224-3bd6ce8340b0?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MjczNzA5OQ&ixlib=rb-1.2.1&q=85);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-/* WIDGET */
-.widget-wrap {
-  min-width: 600px;
-  padding: 30px;
-  border-radius: 20px;
-  background: rgba(255, 255, 255, 0.4);
-}
-
-/* SVG */
-#sort {
-  width: 100%; height:100px;
-  background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 512 512" width="100" xmlns="http://www.w3.org/2000/svg"><path d="M304 416h-64a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h64a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm-128-64h-48V48a16 16 0 0 0-16-16H80a16 16 0 0 0-16 16v304H16c-14.19 0-21.37 17.24-11.29 27.31l80 96a16 16 0 0 0 22.62 0l80-96C197.35 369.26 190.22 352 176 352zm256-192H240a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h192a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm-64 128H240a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h128a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zM496 32H240a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h256a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z" /></svg>');
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-/* FOOTER */
-#code-boxx {
-  font-weight: 600;
-  margin-top: 50px;
-}
-#code-boxx a {
-  display: inline-block;
-  padding: 5px;
-  text-decoration: none;
-  background: #b90a0a;
-  color: #fff;
-}
-#code-boxx , h1 { text-align: center; }
+      #map {
+        height: 400px;
+        width: 100%;
+      }
     </style>
   </head>
   <body>
-  
-    <div class="widget-wrap">
-      <div id="sort"></div>
-      <h1>DRAG-N-DROP SORTABLE LIST</h1>
-    
-      <ul id="sortlist">
-        <li>First</li>
-        <li>Second</li>
-        <li>Third</li>
-        <li>Forth</li>
-        <li>Fifth</li>
-      </ul>
+    <div>
+      <label for="start">Start:</label>
+      <input type="text" id="start" placeholder="Enter start address">
+      <label for="destination">Destination:</label>
+      <input type="text" id="destination" placeholder="Enter destination address">
       
-      
-    
-    </div>    
+      <br>
+      <label for="distance">Distance:</label>
+      <input type="text" id="distance" readonly>
+    </div>
+    <div id="map"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDErtDDwYgoI_L6619pr0wNeBnitQvmFb0&libraries=places&callback=initMap" async defer></script>
     <script>
-      function slist (target) {
-  // (A) SET CSS + GET ALL LIST ITEMS
-  target.classList.add("slist");
-  let items = target.getElementsByTagName("li"), current = null;
+      var map;
+      var directionsService;
+      var directionsRenderer;
+      var startAutocomplete;
+      var destinationAutocomplete;
 
-  // (B) MAKE ITEMS DRAGGABLE + SORTABLE
-  for (let i of items) {
-    // (B1) ATTACH DRAGGABLE
-    i.draggable = true;
+      function initMap() {
+        // Initialize the map
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 37.7749, lng: -122.4194}, // Default center coordinates (San Francisco)
+          zoom: 13 // Default zoom level
+        });
 
-    // (B2) DRAG START - YELLOW HIGHLIGHT DROPZONES
-    i.ondragstart = e => {
-      current = i;
-      for (let it of items) {
-        if (it != current) { it.classList.add("hint"); }
+        // Initialize the Directions Service and Directions Renderer
+        directionsService = new google.maps.DirectionsService();
+        directionsRenderer = new google.maps.DirectionsRenderer();
+        directionsRenderer.setMap(map);
+
+        // Initialize the Autocomplete fields
+        startAutocomplete = new google.maps.places.Autocomplete(document.getElementById('start'));
+        destinationAutocomplete = new google.maps.places.Autocomplete(document.getElementById('destination'));
+
+        // Add event listener for place changed event on destination Autocomplete
+        destinationAutocomplete.addListener('place_changed', calculateDistance);
       }
-    };
 
-    // (B3) DRAG ENTER - RED HIGHLIGHT DROPZONE
-    i.ondragenter = e => {
-      if (i != current) { i.classList.add("active"); }
-    };
+      function calculateDistance() {
+        var start = document.getElementById('start').value;
+        var destination = document.getElementById('destination').value;
 
-    // (B4) DRAG LEAVE - REMOVE RED HIGHLIGHT
-    i.ondragleave = () => i.classList.remove("active");
+        var request = {
+          origin: start,
+          destination: destination,
+          travelMode: 'DRIVING' // Other options: 'WALKING', 'BICYCLING', 'TRANSIT'
+        };
 
-    // (B5) DRAG END - REMOVE ALL HIGHLIGHTS
-    i.ondragend = () => { for (let it of items) {
-      it.classList.remove("hint");
-      it.classList.remove("active");
-    }};
-
-    // (B6) DRAG OVER - PREVENT THE DEFAULT "DROP", SO WE CAN DO OUR OWN
-    i.ondragover = e => e.preventDefault();
-
-    // (B7) ON DROP - DO SOMETHING
-    i.ondrop = e => {
-      e.preventDefault();
-      if (i != current) {
-        let currentpos = 0, droppedpos = 0;
-        for (let it=0; it<items.length; it++) {
-          if (current == items[it]) { currentpos = it; }
-          if (i == items[it]) { droppedpos = it; }
-        }
-        if (currentpos < droppedpos) {
-          i.parentNode.insertBefore(current, i.nextSibling);
-        } else {
-          i.parentNode.insertBefore(current, i);
-        }
+        directionsService.route(request, function(result, status) {
+          if (status == 'OK') {
+            directionsRenderer.setDirections(result);
+            var distance = result.routes[0].legs[0].distance.text;
+            document.getElementById('distance').value = distance;
+          } else {
+            console.log('Error:', status);
+          }
+        });
       }
-    };
-  }
-}
-
-// (C) INIT ON PAGE LOAD
-window.addEventListener("DOMContentLoaded", () => {
-  slist(document.getElementById("sortlist"));
-});
-       
-      </script>
-
-
+    </script>
   </body>
 </html>
